[project]
name = "agent-hub"
version = "1.0.0"
description = "Agent Hub API for orchestration and prompt processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]
dev = [
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Conflicts with formatter
    "ISC001",  # Conflicts with formatter
]
fixable = ["ALL"]
unfixable = []
preview = true

[tool.ruff.lint.per-file-ignores]
"e2e/**/*.py" = [
    "S101",    # Allow assert statements in tests
    "PLR2004", # Allow magic values in tests
    "ANN",     # Allow missing type annotations in tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 72
