[project]
name = "agent-hub"
version = "1.0.0"
description = "Agent Hub API for orchestration and prompt processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "langchain",
    "langchain-anthropic",
    "langgraph",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]
dev = [
    "ruff>=0.7.0",
    "basedpyright>=1.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
